--- a/package.json
+++ b/package.json
@@ -51,13 +51,14 @@
     "@babel/runtime": "^7.6.0",
     "@crave/farmblocks-dev-scaffold": "^1.2.0",
     "@percy-io/percy-storybook": "^2.1.0",
-    "@storybook/addon-actions": "^5.1.11",
-    "@storybook/addon-info": "^5.1.11",
-    "@storybook/addon-links": "^5.1.11",
-    "@storybook/addon-storyshots": "^5.1.11",
-    "@storybook/addons": "^5.1.11",
-    "@storybook/react": "^5.1.11",
-    "@storybook/theming": "^5.1.11",
+    "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-docs": "^5.3.0-alpha.7",
+    "@storybook/addon-info": "^5.2.1",
+    "@storybook/addon-links": "^5.2.1",
+    "@storybook/addon-storyshots": "^5.2.1",
+    "@storybook/addons": "^5.2.1",
+    "@storybook/react": "^5.2.1",
+    "@storybook/theming": "^5.2.1",
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.4",
     "@testing-library/react-hooks": "^2.0.1",
