--- a/packages/input-phone/package.json
+++ b/packages/input-phone/package.json
@@ -29,9 +29,26 @@
     "react"
   ],
   "peerDependencies": {
-    "react": "^16.9.0",
     "prop-types": "^15.7.2",
+    "react": "^16.9.0",
     "styled-components": "^4.3.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@crave/farmblocks-input-text": "^3.6.22",
+    "libphonenumber-js": "^1.7.25",
+    "@crave/farmblocks-dropdown": "^1.4.6",
+    "@crave/farmblocks-form-wrapper": "^1.5.12",
+    "@crave/farmblocks-input-select": "^3.7.1",
+    "@crave/farmblocks-input-text": "^3.6.22",
+    "@crave/farmblocks-popover": "^2.0.7",
+    "@crave/farmblocks-theme": "^1.6.2",
+    "detect-emoji-support": "vNakamura/detect-emoji-support",
+    "fuse.js": "^3.4.5",
+    "libphonenumber-js": "^1.7.25",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5"
+  },
+  "devDependencies": {
+    "world-countries": "^2.1.0"
+  }
 }
