feat(input-phone): create script to generate a list of countries
affects: @crave/farmblocks-input-phone

it removes the unnecessary data from the word-countries json

--- a/packages/input-phone/package.json
+++ b/packages/input-phone/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "clean": "rm -rf lib",
-    "build": "yarn clean && babel --root-mode upward src -d lib --ignore 'src/**/*.test.js','src/**/*.story.js'"
+    "build": "yarn clean && babel --root-mode upward src -d lib --ignore 'src/**/*.test.js','src/**/*.story.js'",
+    "prepublish": "node ./updateCountryList.js"
   },
   "repository": {
     "type": "git",
