feat(sidenav): add stories for sidenav component
affects: @crave/farmblocks-sidenav

ISSUES CLOSED: #928

--- a/packages/sidenav/package.json
+++ b/packages/sidenav/package.json
@@ -40,6 +40,7 @@
     "polished": "^3.4.1"
   },
   "devDependencies": {
+    "react-responsive": "^8.0.1",
     "react-router-dom": "^5.1.2",
     "storybook-react-router": "^1.0.8"
   }
