feat(package.json): add storybook breakpoint addon

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@storybook/addon-info": "^5.2.3",
     "@storybook/addon-links": "^5.2.3",
     "@storybook/addon-storyshots": "^5.2.3",
+    "@storybook/addon-viewport": "^5.2.3",
     "@storybook/addons": "^5.2.3",
     "@storybook/react": "^5.2.3",
     "@storybook/theming": "^5.2.3",
