feat(dep xunxo): remove before merge
affects: @crave/farmblocks-sidenav

--- a/packages/sidenav/package.json
+++ b/packages/sidenav/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "@crave/farmblocks-image": "^3.0.0",
-    "@crave/farmblocks-modal": "^2.1.6",
+    "@crave/farmblocks-modal": "2.1.7-alpha-side-nav-js-5342.1.18",
     "@crave/farmblocks-text": "^3.4.2",
     "@crave/farmblocks-theme": "^1.6.2",
     "polished": "^3.4.1"
